[package]
name = "chainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = "0.1.14"
rand = "0.8.5"
simple_logger = "4.3.3"
futures = "0.3.30"

[features]
shell = []
python = []
sql = []


[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
