[package]
name = "chainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"

[features]
shell = []
python = []
sql = []


[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
