[package]
name = "chainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"

[features]
shell = []
python = []
sql = []


[[bin]]
name = "chainz_server"
path = "src/bin/server.rs"

[[bin]]
name = "chainz_client"
path = "src/bin/client.rs"

[workspace]
members = ["src/bin/*", "src/lib.rs"]


[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
